src/tests/fixtures/arguments/TupleLiteralArgument.invalid.ts
/** @gqlType */
export default class Query {
  /** @gqlField */
  hello({ greeting }: { greeting: [string] }): string {
    return "Hello world!";
  }
}
